tests/errors/std-boxed-macro-new-shape.ari
fn main() -> i64 {
  var zone = zone::create(64);
  let boxed = Box!(i64, ref mut zone);
  zone::destroy(zone);
  return 0;
}
